--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.37",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.19.1",
+    "hookrouter": "^1.2.3",
     "moment": "2.27.0",
     "react": "16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
